[gd_scene load_steps=5 format=2]

[ext_resource path="res://Objects/Status/BacktoFuture.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/Chackra/future.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sounds/future1.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sounds/future2.wav" type="AudioStream" id=4]

[node name="Future" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 530, 350 )
scale = Vector2( 1.08, 1.595 )
texture = ExtResource( 2 )

[node name="timeTravel" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="backToFuture" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="finished" from="timeTravel" to="." method="_on_timeTravel_finished"]
[connection signal="finished" from="backToFuture" to="." method="_on_backToFuture_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
